# edurag

./: .env.example  .gitignore  docker-compose.yml  langgraph.json  project-progress.md
backend/: README.md  alembic.ini  final_test.py  main.py  pyproject.toml  run.py  run_e2e.py  test_e2e.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: ad6e71da95c4_add_user_sessions_table.py
backend/app/: __init__.py  deps.py
backend/app/api/v1/: admin.py  auth.py  courses.py  documents.py  feedback.py  qa.py  search.py
backend/app/core/: config.py  database.py  security.py
backend/app/graph/: __init__.py  builder.py  checkpointer.py  llm.py  state.py  web_search_client.py
backend/app/graph/edges/: routing.py
backend/app/models/: __init__.py  audit_log.py  chunk.py  course.py  document.py  feedback.py  models.py  qa_history.py  refresh_token.py  user.py  user_session.py
backend/app/schemas/: common.py  course.py  document.py  feedback.py  search.py  user.py
backend/app/services/: chunker.py  document_parser.py  vector_store.py
backend/app/utils/: embedding.py
backend/scripts/: check_db.py  download_model.py  init_db.py  setup_db.py  test_auth.py  test_minimal.py
backend/tests/: conftest.py  test_auth.py  test_env.py  test_security.py  utils.py
backend/tests/fixtures/: __init__.py  auth.py  client.py  db.py  documents.py  graph.py
backend/tests/graph/: conftest.py  test_graph_integration.py  test_nodes.py  test_retry.py  test_safety.py  test_sse_streaming.py
backend/tests/pipeline/: test_chunker.py  test_parser.py
docs/: 需求设计文档.md  (+7 more)
(+67 files in other folders)
