[project]
name = "eduraq"
version = "0.1.0"
description = "校园课程资料智能检索与问答服务系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "backoff>=2.2.1",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "chromadb>=0.5.0",
    "docling>=2.0.0",
    "langchain>=0.2.0",
    "langchain-deepseek>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
    "httpx>=0.27.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "tavily-python>=0.5.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
# 仅 EMBEDDING_PROVIDER=local 时需要
local-embedding = [
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]
